added a lot of css

--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
         <title>Hayley M. Budzinski</title>
     </head>
 
-    <body>
-
-             <nav id="nav1">
-                <ul>
-                    <li><a id="myname"> Hayley M. Budzinski</a></li>
-                    <li><a class="active" href="#">About</a></li>
-                    <li><a class="active" href="#">Portfolio</a></li>
-                    <li><a class="active" href="#">Contact</a></li>
-                </ul>
-            </nav>   
-             
+    <body background-image="hotel-wallpaper.png">
+        <nav class="nav1">
+            <ul>
+                <li><a id="myname"> Hayley M. Budzinski</a></li>
+                <li><a class="active" href="index.html">About</a></li>
+                <li><a class="active" href="portfolio.html">Portfolio</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
+            </ul>
+        </nav>        
     <div>
         <h1>About Me</h1>
 
         <section h2>
-            <img src="#" alt= "Me">
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+            <img src="C:\Users\Hayley Budzinski\Portfolio\Portfolio\assets\images\WIN_20191021_18_20_08_Pro.jpg" width="250" class="floatleft" alt= "Me">
+            <p>My name is Hayley Budzinski. I was born and raised in Anchorage, Alaska, and went to college at Colorado State University where I studied International Studies and International Development.</p>
+            <p>After College, I traveled around Europe for eight months and worked in hostels and pubs. Following that trip, I went back to Alaska for six months and worked in a restaurant to save up some money before moving to Dublin, Ireland for a year.</p>
+            <p>After living in Ireland, I moved to Denver and got a job as a Paralegal. Once I realized that being a paralegal was not what I wanted to do, I decided to take this course to change my life and become a coder!</p>
+            <p>Thank you for taking the time to review my portfolio!</p>
         </section h2>
     </div>
 
