--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,14 @@
     </head>
 
     <body>
-
-        <header>
-                <ul>
-                    <li><a class="active" href="#">About</a></li>
-                    <li><a class="active" href="#">Portfolio</a></li>
-                    <li><a class="active" href="#">Contact</a></li>
-                </ul>
-        </header>
-    
+        <nav class="nav1">
+            <ul>
+                <li><a id="myname"> Hayley M. Budzinski</a></li>
+                <li><a class="active" href="index.html">About</a></li>
+                <li><a class="active" href="portfolio.html">Portfolio</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
+            </ul>
+        </nav>   
     <div>
         <h1>Contact</h1>
 
@@ -28,7 +27,7 @@
         <form action= "/submit message">
         <input id="message" type="text" placeholder="Message" required></form>
 
-        <button type="Submit"> Submit</button></button>
+        <button id="btn" type="Submit"> Submit</button></button>
     </div>
 
         <footer>Copyright</footer>
