--- a/portfolio.html
+++ b/portfolio.html
@@ -6,27 +6,42 @@
     </head>
 
     <body>
+        <nav class="nav1">
+            <ul>
+                <li><a id="myname"> Hayley M. Budzinski</a></li>
+                <li><a class="active" href="index.html">About</a></li>
+                <li><a class="active" href="portfolio.html">Portfolio</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
+            </ul>
+        </nav>   
 
-        <header>
-                <ul>
-                    <li><a class="active" href="#">About</a></li>
-                    <li><a class="active" href="#">Portfolio</a></li>
-                    <li><a class="active" href="#">Contact</a></li>
-                </ul>
-        </header>
-    
-    <div>
+    <div class="maininfo">
         <h1>Portfolio</h1>
 
-        <section class="container">
+        <div class="container">
+            <div class= "box a">Hangman</div>
+            <div class= "box a1">Hangman Image</div>
+        </div>
 
-            <aside><img src= "#">Hangman</aside>
-            <aside><img src= "#">Trivia Game</aside>
-            <aside><img src= "#">Rock Paper Scissors</aside>
-            <aside><img src= "#">RPG Game</aside>
-            <aside><img src= "#">Rutgers Info Widget</aside>
+        <div class="container">
+            <div class= "box b">Trivia Game</div>
+            <div class= "box b1">Trivia Image</div>
+        </div>
 
-        </section>
+        <div class="container">
+            <div class= "box c">Rock Paper Scissors</div>
+            <div class= "box c1">Rock image</div>    
+        </div>
+
+        <div class="container">
+            <div class= "box d">RPG Game</div>
+            <div class= "box d1">RPG image</div>
+        </div>
+
+        <div class="container">
+            <div class= "box e">Rutgers Info Widget</div>
+            <div class= "box e1">Rutgers image</div>
+        </div>
     </div>
 
         <footer>Copyright</footer>
