--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
                 <li><a class="active" href="contact.html">Contact</a></li>
             </ul>
         </nav>   
-    <div>
+    <div class="maininfo">
         <h1>Contact</h1>
 
         Name
