--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a class="active" href="contact.html">Contact</a></li>
             </ul>
         </nav>        
-    <div>
+    <div class="maininfo">
         <h1>About Me</h1>
 
         <section h2>
