--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 
         <div class="container">
             <div class= "box a">Hangman</div>
-            <div class= "box a1">Hangman Image</div>
+            <div class= "box a1"><img src="./assets/images/art-blur-dark-96381.jpg" width=200 height=200></div>
         </div>
 
         <div class="container">
