finalized css and html

--- a/contact.html
+++ b/contact.html
@@ -10,28 +10,29 @@
             <ul>
                 <li><a id="myname"> Hayley M. Budzinski</a></li>
                 <li><a class="active" href="index.html">About</a></li>
-                <li><a class="active" href="portfolio.html">Portfolio</a></li>
+                <li><a class="active" id="littlelines" href="portfolio.html">Portfolio</a></li>
                 <li><a class="active" href="contact.html">Contact</a></li>
             </ul>
         </nav>   
+
     <div class="maininfo">
         <h1>Contact</h1>
 
         Name
         <form action= "/submit name">
-        <input id="name" type="text" placeholder="Name" required></form>
+        <input id="name" type="text" placeholder="John Smith" required></form>
         Email
         <form action= "/submit email">
-        <input id="email" type="text" placeholder="Email" required></form>
+        <input id="email" type="text" placeholder="example@gmail.com" required></form>
         Message
         <form action= "/submit message">
-        <input id="message" type="text" placeholder="Message" required></form>
+        <input id="message" type="text" required></form>
 
         <button id="btn" type="Submit"> Submit</button></button>
     </div>
 
-        <footer>Copyright</footer>
-
+        <footer>Copyright©</footer>
+        
     </body>
 
 </html>
