--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <title>Hayley M. Budzinski</title>
     </head>
 
-    <body background-image="hotel-wallpaper.png">
+<body>
         <nav class="nav1">
             <ul>
                 <li><a id="myname"> Hayley M. Budzinski</a></li>
                 <li><a class="active" href="index.html">About</a></li>
-                <li><a class="active" href="portfolio.html">Portfolio</a></li>
+                <li><a class="active" id="littlelines" href="portfolio.html">Portfolio</a></li>
                 <li><a class="active" href="contact.html">Contact</a></li>
             </ul>
         </nav>        
@@ -19,15 +19,16 @@
         <h1>About Me</h1>
 
         <section h2>
-            <img src="C:\Users\Hayley Budzinski\Portfolio\Portfolio\assets\images\WIN_20191021_18_20_08_Pro.jpg" width="250" class="floatleft" alt= "Me">
+            <img src="./assets/images/Me.jpg" width="200" class="floatleft" alt= "Me">
             <p>My name is Hayley Budzinski. I was born and raised in Anchorage, Alaska, and went to college at Colorado State University where I studied International Studies and International Development.</p>
             <p>After College, I traveled around Europe for eight months and worked in hostels and pubs. Following that trip, I went back to Alaska for six months and worked in a restaurant to save up some money before moving to Dublin, Ireland for a year.</p>
+            <br>
             <p>After living in Ireland, I moved to Denver and got a job as a Paralegal. Once I realized that being a paralegal was not what I wanted to do, I decided to take this course to change my life and become a coder!</p>
             <p>Thank you for taking the time to review my portfolio!</p>
         </section h2>
     </div>
 
-        <footer>Copyright</footer>
+    <footer>Copyright©</footer>
 
     </body>
 
