--- a/portfolio.html
+++ b/portfolio.html
@@ -6,45 +6,45 @@
     </head>
 
     <body>
-        <nav class="nav1">
+        <header class="nav1">
             <ul>
                 <li><a id="myname"> Hayley M. Budzinski</a></li>
                 <li><a class="active" href="index.html">About</a></li>
-                <li><a class="active" href="portfolio.html">Portfolio</a></li>
+                <li><a class="active" id="littlelines" href="portfolio.html">Portfolio</a></li>
                 <li><a class="active" href="contact.html">Contact</a></li>
             </ul>
-        </nav>   
+        </header>
 
     <div class="maininfo">
         <h1>Portfolio</h1>
 
         <div class="container">
-            <div class= "box a">Hangman</div>
-            <div class= "box a1"><img src="./assets/images/art-blur-dark-96381.jpg" width=200 height=200></div>
+            <div class= "box a">Northern Lights</div>
+            <div class= "box a1"><img src="./assets/images/bird-s-eye-view.jpg" width=200 height=200 alt="darkblur"></div>
         </div>
 
         <div class="container">
-            <div class= "box b">Trivia Game</div>
-            <div class= "box b1">Trivia Image</div>
+            <div class= "box b">Galaxy</div>
+            <div class= "box b1"><img src="./assets/images/astronomy-constellation-cosmos.jpg" width=200 height=200 alt="stars"></div>
         </div>
 
         <div class="container">
-            <div class= "box c">Rock Paper Scissors</div>
-            <div class= "box c1">Rock image</div>    
+            <div class= "box c">Planet Earth</div>
+            <div class= "box c1"><img src="./assets/images/blue-planet.jpg" width=200 height=200 alt="earth"></div>    
         </div>
 
         <div class="container">
-            <div class= "box d">RPG Game</div>
-            <div class= "box d1">RPG image</div>
+            <div class= "box d">Astronaut</div>
+            <div class= "box d1"><img src="./assets/images/apollo-astronaut-landin.jpg" width=200 height=200 alt="astronaut"></div>
         </div>
 
         <div class="container">
-            <div class= "box e">Rutgers Info Widget</div>
-            <div class= "box e1">Rutgers image</div>
+            <div class= "box e">Night Sky</div>
+            <div class= "box e1"><img src="./assets/images/beautiful-cosmos-galaxy-262662.jpg" width=200 height=200 alt="tree"></div>
         </div>
     </div>
 
-        <footer>Copyright</footer>
+    <footer>Copyright©</footer>
 
     </body>
 
