made some last minute changes to my About Me page

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <img src="./assets/images/Me.jpg" width="200" class="floatleft" alt= "Me">
             <p>My name is Hayley Budzinski. I was born and raised in Anchorage, Alaska, and went to college at Colorado State University where I studied International Studies and International Development.</p>
             <p>After College, I traveled around Europe for eight months and worked in hostels and pubs. Following that trip, I went back to Alaska for six months and worked in a restaurant to save up some money before moving to Dublin, Ireland for a year.</p>
-            <br>
             <p>After living in Ireland, I moved to Denver and got a job as a Paralegal. Once I realized that being a paralegal was not what I wanted to do, I decided to take this course to change my life and become a coder!</p>
             <p>Thank you for taking the time to review my portfolio!</p>
+            <p>Here is some Cheese Ipsum to show that my text wraps around my image. Jarlsberg halloumi fromage. Cheese and biscuits monterey jack stilton stilton squirty cheese stilton cheese slices fromage. Bavarian bergkase roquefort goat ricotta cheese strings monterey jack when the cheese comes out everybody's happy caerphilly. Rubber cheese say cheese when the cheese comes out everybody's happy cheese on toast cream cheese cheese and wine edam everyone loves. Cheesy grin caerphilly cheese on toast who moved my cheese. Gouda red leicester cheese and wine. Monterey jack dolcelatte parmesan bavarian bergkase parmesan ricotta bavarian bergkase mascarpone. Paneer danish fontina pepper jack squirty cheese cheese and biscuits when the cheese comes out everybody's happy cheesecake roquefort. Feta emmental.</p>
         </section h2>
     </div>
 
